# multimodal-rag

./: .gitignore  README.md  pyproject.toml
backend/: auth.py  doc_memory.json  document_processor.py  main.py  rag_pipeline.py  users.json
frontend/: app.py
